[package]
name = "moonriver-runtime"
authors = ["PureStake"]
build = "build.rs"
description = "Moonriver Runtime"
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
version = "0.8.4"

[dependencies]
hex-literal = { version = "0.3.4", optional = true }
log = "0.4"
rlp = { version = "0.5", optional = true, default-features = false }
serde = { version = "1.0.101", optional = true, default-features = false, features = [
	"derive",
] }
sha3 = { version = "0.8", optional = true, default-features = false }
smallvec = "1.8.0"

# Axtend
account = { path = "../../primitives/account/", default-features = false }
axtend-core-primitives = { path = "../../core-primitives", default-features = false }
axtend-relay-encoder = { path = "../relay-encoder", default-features = false }
precompile-utils = { path = "../../precompiles/utils", default-features = false }
runtime-common = { path = "../common", default-features = false, features = [
	"xcm-support",
] }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Axtend pallets
pallet-asset-manager = { path = "../../pallets/asset-manager", default-features = false }
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
pallet-crowdloan-rewards = { git = "https://github.com/axia-tech/crowdloan-rewards", branch = "crowdloan", default-features = false }
pallet-ethereum-chain-id = { path = "../../pallets/ethereum-chain-id", default-features = false }
pallet-maintenance-mode = { path = "../../pallets/maintenance-mode", default-features = false, features = [
	"xcm-support",
] }
pallet-migrations = { path = "../../pallets/migrations", default-features = false }
pallet-proxy-genesis-companion = { path = "../../pallets/proxy-genesis-companion", default-features = false }
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
xcm-transactor = { path = "../../pallets/xcm-transactor", default-features = false }

# Axtend precompiles
crowdloan-rewards-precompiles = { path = "../../precompiles/crowdloan-rewards", default-features = false }
pallet-author-mapping-precompiles = { path = "../../precompiles/author-mapping", default-features = false }
pallet-democracy-precompiles = { path = "../../precompiles/pallet-democracy", default-features = false }
pallet-evm-precompile-assets-erc20 = { path = "../../precompiles/assets-erc20", default-features = false }
pallet-evm-precompile-balances-erc20 = { path = "../../precompiles/balances-erc20", default-features = false }
allychain-staking-precompiles = { path = "../../precompiles/allychain-staking", default-features = false }
relay-encoder-precompiles = { path = "../../precompiles/relay-encoder", default-features = false }
xcm-transactor-precompiles = { path = "../../precompiles/xcm_transactor", default-features = false }
xtokens-precompiles = { path = "../../precompiles/xtokens", default-features = false }

# Axtend tracing
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", optional = true, default-features = false }
axtend-evm-tracer = { path = "../evm_tracer", optional = true, default-features = false }
axtend-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
axtend-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }

# Substrate
frame-executive = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-assets = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-balances = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-collective = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-democracy = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-identity = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-scheduler = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-society = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-treasury = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
pallet-utility = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
parity-scale-codec = { version = "2.2", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-debug-derive = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-inherents = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-offchain = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-session = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-transaction-pool = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }
sp-version = { git = "https://github.com/axia-tech/axlib", branch = "axlib", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
fp-rpc = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
fp-self-contained = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-base-fee = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-ethereum = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/axia-tech/frontier", branch = "frontier", default-features = false }

# Cumulus / Nimbus
cumulus-pallet-dmp-queue = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "nimbus", default-features = false }
pallet-author-inherent = { git = "https://github.com/axia-tech/nimbus", branch = "nimbus", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/axia-tech/nimbus", branch = "nimbus", default-features = false }
allychain-info = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }

# Axia / XCM
orml-xtokens = { git = "https://github.com/axia-tech/open-runtime-module-library", branch = "orml", default-features = false }
pallet-xcm = { git = "https://github.com/axia-tech/axia", branch = "axia", default-features = false }
axia-core-primitives = { git = "https://github.com/axia-tech/axia", branch = "axia", default-features = false }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "axia", default-features = false }
xcm = { git = "https://github.com/axia-tech/axia", branch = "axia", default-features = false }
xcm-builder = { git = "https://github.com/axia-tech/axia", branch = "axia", default-features = false }
xcm-executor = { git = "https://github.com/axia-tech/axia", branch = "axia", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "axlib", optional = true, default-features = false }
frame-system-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "axlib", optional = true, default-features = false }
frame-try-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"
rlp = "0.5"
sha3 = "0.9"

cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/axia-tech/cumulus", branch = "cumulus", default-features = false }

axia-runtime-allychains = { git = "https://github.com/axia-tech/axia", branch = "axia" }
xcm-simulator = { git = "https://github.com/axia-tech/axia", branch = "axia" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }

[features]
default = ["std"]
std = [
	"account/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"evm-tracing-events/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"axtend-core-primitives/std",
	"axtend-evm-tracer/std",
	"axtend-rpc-primitives-debug/std",
	"axtend-rpc-primitives-txpool/std",
	"nimbus-primitives/std",
	"orml-xtokens/std",
	"pallet-asset-manager/std",
	"pallet-assets/std",
	"pallet-author-inherent/std",
	"pallet-author-mapping-precompiles/std",
	"pallet-author-mapping/std",
	"pallet-author-slot-filter/std",
	"pallet-balances/std",
	"pallet-base-fee/std",
	"pallet-collective/std",
	"pallet-crowdloan-rewards/std",
	"pallet-democracy-precompiles/std",
	"pallet-democracy/std",
	"pallet-ethereum-chain-id/std",
	"pallet-ethereum/std",
	"pallet-evm-precompile-balances-erc20/std",
	"pallet-evm/std",
	"pallet-identity/std",
	"pallet-maintenance-mode/std",
	"pallet-migrations/std",
	"pallet-proxy-genesis-companion/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-society/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"allychain-info/std",
	"allychain-staking-precompiles/std",
	"allychain-staking/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"runtime-common/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm-primitives/std",
	"xcm-transactor-precompiles/std",
	"xcm-transactor/std",
	"xcm/std",
	"xtokens-precompiles/std",
]

# Must be enabled for tracing runtimes only
evm-tracing = ["evm-tracing-events", "axtend-evm-tracer", "rlp", "sha3"]

# Allow to print logs details (no wasm:stripped)
force-debug = ["sp-debug-derive/force-debug"]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-author-mapping/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-crowdloan-rewards/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"allychain-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"pallet-asset-manager/try-runtime",
	"pallet-author-mapping/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-maintenance-mode/try-runtime",
	#"pallet-crowdloan-rewards/try-runtime",
	"pallet-migrations/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-society/try-runtime",
	"pallet-timestamp/try-runtime",
	"allychain-staking/try-runtime",
	"runtime-common/try-runtime",
]
