[package]
name = "axtend-rpc-core-debug"
authors = ["PureStake"]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.1.0"

[dependencies]
ethereum-types = "0.12.1"
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
axtend-client-evm-tracing = { path = "../../evm-tracing" }
axtend-rpc-core-types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
