[package]
name = "axtend-rpc-core-trace"
authors = [ "PureStake" ]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.6.0"

[dependencies]
ethereum-types = "0.12.1"
futures = { version = "0.3.1", features = [ "compat" ] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
axtend-client-evm-tracing = { path = "../../evm-tracing" }
axtend-rpc-core-types = { path = "../types" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
