[package]
name = "axtend-rpc-core-types"
authors = [ "PureStake" ]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.1.0"

[dependencies]
ethereum-types = "0.12.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
