[package]
name = "axtend-rpc-debug"
authors = ["PureStake"]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.1.0"

[dependencies]
futures = { version = "0.3", features = ["compat"] }
hex-literal = "0.3.4"
jsonrpc-core = "18.0.0"
tokio = { version = "1.10", features = ["sync", "time"] }

# Axtend
axtend-client-evm-tracing = { path = "../../evm-tracing" }
axtend-rpc-core-debug = { path = "../../rpc-core/debug" }
axtend-rpc-core-types = { path = "../../rpc-core/types" }
axtend-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }

# Substrate
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sc-utils = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }

# Frontier
ethereum = { version = "0.11.1", default-features = false, features = [
    "with-codec",
] }
ethereum-types = "0.12.1"
fc-consensus = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
fc-db = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
fc-rpc = { git = "https://github.com/axia-tech/frontier", branch = "frontier", features = [
    "rpc_binary_search_estimate",
] }
fp-rpc = { git = "https://github.com/axia-tech/frontier", branch = "frontier" }
